basic template ready

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 <body>
   <div id="container">
     <div id="closer">
-      <div class ="quip"><div class="rainbow-text">Sell me fruit!!!!!!!!!!!</div></div>
+      <div class ="quip rainbow-border"><div class="rainbow-text">Sell me fruit!!!!!!!!!!!</div></div>
       <img class="avatar" src="http://farragofiction.com/ZampanioHotlink/trickster_closer.gif"/>
+      <div class="sales-pitch rainbow-border">
+
+      </div>
     </div>
 
   </div>
