random fruit colors

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="utils.js"></script>
   <script src="SeededRandom.js"></script>
 
+  <script src="canvas_utils.js"></script>
 
   <script src="data.js"></script>
  
