--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="canvas_utils.js"></script>
 
   <script src="data.js"></script>
- 
+
 
   <script src="index.js"></script>
 
@@ -21,14 +21,17 @@
 
 
 <body>
-  <div id="container">
-    <div id="closer">
-      <div class ="quip rainbow-border"><div class="rainbow-text">Sell me fruit!!!!!!!!!!!</div></div>
-      <img class="avatar" src="http://farragofiction.com/ZampanioHotlink/trickster_closer.gif"/>
-      <div class="sales-pitch rainbow-border">
-
-      </div>
+  <div id="closer">
+    <div class="quip rainbow-border">
+      <div class="rainbow-text">Sell me fruit!!!!!!!!!!!</div>
     </div>
+    <img class="avatar" src="http://farragofiction.com/ZampanioHotlink/trickster_closer_transparency.gif" />
+    <div class="sales-pitch rainbow-border">
+
+    </div>
+  </div>
+
+  <div id="bounce-container">
 
   </div>
 </body>
