quip system stubbed out

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div id="closer">
     <div class="quip rainbow-border">
-      <div class="rainbow-text">Sell me fruit!!!!!!!!!!!</div>
+      <div class="quip-content rainbow-text">Sell me fruit!!!!!!!!!!!</div>
     </div>
     <img class="avatar" src="http://farragofiction.com/ZampanioHotlink/trickster_closer_transparency.gif" />
     <div class="sales-pitch rainbow-border">
