--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
   <script src="index.js"></script>
+  <script src="a_present_for_those_who_seek.js"></script>
 
 </head>
 
@@ -38,6 +39,10 @@
   <div id="button-container">
 
   </div>
+  <audio autoplay="true" loop="true" id="audio">
+    <source src="seeking_help.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 </body>
 
 
