her font is even worse

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="closer">
     <div class="quip rainbow-border">
-      <div class="quip-content rainbow-text">Sell me Fruit!!!!!!!!!!!  Lore for Fruit! Come and get your juicy Lore here! </div>
+      <div class="quip-content rainbowTextAnimated">Sell me Fruit!!!!!!!!!!!  Lore for Fruit! Come and get your juicy Lore here! </div>
     </div>
     <img class="avatar" src="http://farragofiction.com/ZampanioHotlink/trickster_closer_transparency.gif" />
     <div class="sales-pitch rainbow-border">
